--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vue-simple-starter",
+  "name": "vue-simple-panel-starter",
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/puppet-666/vue-simple-starter.git"
+    "url": "git+https://github.com/puppet-666/vue-simple-panel-starter.git"
   },
   "keywords": [
     "vue3",
@@ -19,7 +19,7 @@
   "dependencies": {
     "@vueuse/core": "^9.13.0",
     "@vueuse/integrations": "^9.13.0",
-    "ant-design-vue": "^4.0.7",
+    "ant-design-vue": "4.0.6",
     "axios": "^1.3.4",
     "unocss": "^0.50.2",
     "vue": "^3.3.2",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@chuhoman/eslint-config": "^0.1.0",
+    "@types/node": "^20.9.0",
     "@vitejs/plugin-vue": "^4.2.0",
     "@vue-macros/reactivity-transform": "^0.2.4",
     "@vue-macros/volar": "^0.8.4",
