--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
       "vite/client",
       "vite-plugin-pages/client"
     ],
+    "paths": {
+      "@/*": ["./src/*"]
+    },
   },
   "vueCompilerOptions": {
     "plugins": [
